--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.2.1'
     implementation 'com.google.firebase:firebase-messaging:17.6.0'
     implementation 'org.jetbrains.anko:anko-common:0.8.3'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
+    implementation 'com.xwray:groupie:2.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
