ListView Complete 50 percent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".List_patient">
+        </activity>
+        <activity android:name=".DBinput.Listview_p_n">
+        </activity>
         <activity android:name=".Listview_patient_new">
         </activity>
         <activity android:name=".Listview_patient">
