--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".Alertparkinson">
+        </activity>
+        <activity android:name=".Alerttime">
+        </activity>
+        <activity android:name=".Alertparalysis">
+        </activity>
+        <activity android:name=".alertparkinson">
+        </activity>
+        <activity android:name=".Alertstroke">
+        </activity>
+        <activity android:name=".Alertdisease">
+        </activity>
         <activity android:name=".SymptommActivity">
         </activity>
         <activity android:name=".Symptom">
