--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'androidx.core:core-ktx:1.2.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-database:17.0.0'
+    implementation 'com.google.firebase:firebase-database:18.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    implementation 'com.google.firebase:firebase-core:16.0.9'
-    implementation 'com.google.firebase:firebase-auth:17.0.0'
-    implementation 'com.google.firebase:firebase-messaging:18.0.0'
-    implementation 'com.google.firebase:firebase-storage:17.0.0'
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-auth:18.0.0'
+    implementation 'com.google.firebase:firebase-messaging:19.0.1'
+    implementation 'com.google.firebase:firebase-storage:18.0.0'
     implementation 'org.jetbrains.anko:anko-common:0.8.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.firebaseui:firebase-ui-database:0.4.0'
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.tapadoo.android:alerter:4.0.2'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
