--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".Result_Activity">
+        </activity>
         <activity android:name=".Holdd_noti_Old_Activity">
         </activity>
         <activity android:name=".Holdd_noti_Activity">
